prometheus/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  routes:
    - match: Host(`grafana.stoicatedy.ovh`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
  middlewares:
    - name: hsts-header
  tls:
    secretName: certificate-stoicatedy-ovh
